# mkdocs-document-dates

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  setup.py
mkdocs_document_dates/: __init__.py  cache_manager.py  hooks_installer.py  plugin.py  utils.py
mkdocs_document_dates/hooks/: pre-commit
mkdocs_document_dates/static/fonts/: material-icons.css
mkdocs_document_dates/static/templates/: recently_updated_detail.html  recently_updated_grid.html  recently_updated_group.html  recently_updated_list.html
templates/overrides/: sitemap.xml
templates/overrides/partials/: nav.html  source-file.html
